Added interesting button with Daisy and Background image with Tailwind

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <button class="btn btn-ghost">Ghost</button>
         <button class="btn btn-link">Link</button>
 
-        <div>
-            <button class="btn glass">Glass button</button>
+        <div class="relative bg-[url('./images/doha-skyline.jpg')] mx-auto max-w-6xl h-screen bg-cover">
+            <button class="btn glass btn-lg absolute top-1/2 left-1/2">Glass button</button>
         </div>
         
     </main>
